<resources>
    <string name="app_name">ArtiSense</string>
    <string name="art_title">Art Title</string>
    <string name="sample_description">Sample Description</string>
    <string name="art_author">By: Art Author</string>
    <string name="todo">TODO</string>
    <string name="artiSense">ArtiSense</string>
    <string name="enter">Enter</string>
    <string name="art_short_description">Art Short Description</string>
    <string name="vincent_van_gogh">Vincent Van Gogh</string>
    <string name="famous_art_pieces">Famous Art Pieces</string>
    <string name="art_painted_date">1859</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="favorites">Favorites</string>
    <string name="contemporary_art">Contemporary Art</string>
    <string name="currently_displayed_location">Current Showroom Location</string>
    <string name="galleries_distribution">Galleries Distribution</string>
    <string name="galleries">Galleries</string>
    <string name="question_goes_here">Question goes here</string>
    <string name="submit">Submit</string>
    <string name="next">Next</string>
    <string name="quiz">Quiz</string>
    <string name="quiz_score">Score: 0/0</string>
    <string name="restart_quiz">Restart Quiz</string>
    <string name="question_index">Question 1</string>
    <string name="art_quizzes">Art Quizzes</string>
</resources>