<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/artDetailView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingVertical="4dp"
    tools:context=".ArtPieceDetailActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:paddingVertical="8dp"
        android:paddingHorizontal="8dp"
        android:orientation="horizontal">

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="0dp">

            <ImageView
                android:id="@+id/artImage"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:layout_gravity="center_vertical"
                android:src="@drawable/fintechlogo" />

        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/artTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:paddingHorizontal="4dp"
                android:text="@string/art_title"
                android:gravity="start"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/artAuthor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="4dp"
                android:layout_marginBottom="4dp"
                android:text="@string/art_author"
                android:gravity="start"
                android:textColor="@color/grey"
                android:textSize="18sp"
                android:textStyle="italic"/>

            <TextView
                android:id="@+id/artPaintedDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="4dp"
                android:layout_marginBottom="4dp"
                android:text="@string/art_painted_date"
                android:gravity="start"
                android:textColor="@color/grey"
                android:textSize="18sp"
                android:textStyle="italic"/>

        </LinearLayout>

    </LinearLayout>

<!--    Add a break line here-->

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_margin="8dp"
        android:background="@color/grey" />


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/artDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="8dp"
            android:paddingVertical="4dp"
            android:text="@string/sample_description"
            android:textSize="16sp" />

    </ScrollView>


</LinearLayout>
